--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     
     "autoload": {
         "psr-4": {
-            "IHRISSYNC\\ihrisSync\\": "src/sync"
+            "APELON\\ihrisFhirSync\\": "src/sync"
         }
     }
 }
